Unreviewed, Fix jsc shell https://bugs.webkit.org/show_bug.cgi?id=184600

WebAssembly module loading does not finish with drainMicrotasks().
So JSNativeStdFunction's capturing variables become invalid.
This patch fixes this issue.

* jsc.cpp:
(functionDollarAgentStart):
(runWithOptions):
(runJSC):
(jscmain):

Canonical link: https://commits.webkit.org/200277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230798 268f45cc-cd09-0410-ab3c-d52691b4dbfc